--- a/templates/projects/presenter.html
+++ b/templates/projects/presenter.html
@@ -43,4 +43,7 @@
         </div>
     </div>
 </div>
+{% if current_user.is_authenticated()  %}
+    <script>$.ajax('/api/discourse/badges/assign?trigger={{ request.url }}');</script>
+{% endif %}
 {% endblock %}
