--- a/templates/blog/_helpers.html
+++ b/templates/blog/_helpers.html
@@ -16,26 +16,27 @@
                 
                 <div class="row">
                     <div class="col-xs-12 col-md-8 padding-bottom-xs">
-                        <a href="#" class="btn btn-facebook"
+                        <a href="#" data-content="Share on Facebook" class="btn-popover btn btn-facebook"
                            onclick="popUp=window.open('http://www.facebook.com/sharer.php?u=http%3A%2F%2Fwww.libcrowds.com%2Fblog%2F{{blogpost.id}}',
                                                    'popupwindow', 'scrollbars=yes,width=510,height=620');popUp.focus();return false">
                             <i class="fa fa-facebook"></i>
                         </a>
                         <a href="https://twitter.com/intent/tweet?original_referer=http%3A%2F%2Fwww.libcrowds.com%2Fblog%2F{{blogpost.id}}
-                        &text={{blogpost.title}}&tw_p=tweetbutton&url=http%3A%2F%2Fwww.libcrowds.com%2Fblog%2F{{blogpost.id}}" class="btn btn-twitter">
+                        &text={{blogpost.title}}&tw_p=tweetbutton&url=http%3A%2F%2Fwww.libcrowds.com%2Fblog%2F{{blogpost.id}}"
+                                data-content="Share on Twitter" class="btn-popover btn btn-twitter">
                             <i class="fa fa-twitter"></i>
                         </a>
-                        <a href="#" class="btn btn-googleplus"
+                        <a href="#" data-content="Share on Google+" class="btn-popover btn btn-googleplus"
                         onclick="popUp=window.open('https://plus.google.com/share?url=http%3A%2F%2Fwww.libcrowds.com%2Fblog%2F{{blogpost.id}}',
                                                    'popupwindow', 'scrollbars=yes,width=510,height=725');popUp.focus();return false">
                             <i class="fa fa-google"></i>
                         </a>
-                        <a href="#" class="btn btn-tumblr"
+                        <a href="#" data-content="Share on Tumblr" class="btn-popover btn btn-tumblr"
                         onclick="popUp=window.open('http://www.tumblr.com/share/link?url=http%3A%2F%2Fwww.libcrowds.com%2Fblog%2F{{blogpost.id}}',
                                                    'popupwindow', 'scrollbars=yes,width=510,height=430');popUp.focus();return false">
                             <i class="fa fa-tumblr"></i>
                         </a>
-                        <a href="#" class="btn btn-linkedin"
+                        <a href="#" data-content="Share on LinkedIn" class="btn-popover btn btn-linkedin"
                         onclick="popUp=window.open('https://www.linkedin.com/cws/share?url=http%3A%2F%2Fwww.libcrowds.com%2Fblog%2F{{blogpost.id}}',
                                                    'popupwindow', 'scrollbars=yes,width=510,height=520');popUp.focus();return false">
                             <i class="fa fa-linkedin"></i>
