--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -77,30 +77,33 @@
     <div class="col-xs-12 text-center padding-top-sm text-center">
       <a class="btn btn-danger" href="{{url_for('leaderboard.index')}}">View Leaderboard</a>
       <hr class="padding-bottom-xs">
-        <a href="#" class="btn btn-facebook"
+        
+        <!-- Social media-->
+        <a data-content="Share" class="btn btn-facebook btn-popover"
            onclick="popUp=window.open('http://www.facebook.com/sharer.php?u=http%3A%2F%2Fwww.libcrowds.com',
                                    'popupwindow', 'scrollbars=yes,width=510,height=620');popUp.focus();return false">
             <i class="fa fa-facebook"></i>
         </a>
         <a href="https://twitter.com/intent/tweet?original_referer=http%3A%2F%2Fwww.libcrowds.com
-        &text=Participate%20in%20crowdsourcing%20projects%20and%20help%20improve%20access%20to%20the%20British%20Library&#39;s%20collections.&tw_p=tweetbutton&url=http%3A%2F%2Fwww.libcrowds.com" class="btn btn-twitter">
+        &text=Participate%20in%20crowdsourcing%20projects%20and%20help%20improve%20access%20to%20the%20British%20Library&
+        #39;s%20collections.&tw_p=tweetbutton&url=http%3A%2F%2Fwww.libcrowds.com" data-content="Share" class="btn btn-twitter btn-popover">
             <i class="fa fa-twitter"></i>
         </a>
-        <a href="#" class="btn btn-googleplus"
+        <a href="#" data-content="Share" class="btn btn-googleplus btn-popover"
         onclick="popUp=window.open('https://plus.google.com/share?url=http%3A%2F%2Fwww.libcrowds.com',
                                    'popupwindow', 'scrollbars=yes,width=510,height=725');popUp.focus();return false">
             <i class="fa fa-google"></i>
         </a>
-        <a href="#" class="btn btn-stumbleupon"
-        onclick="popUp=window.open('http://www.stumbleupon.com/submit?url=http%3A%2F%2Fwww.libcrowds.com',
-                                   'popupwindow', 'scrollbars=yes,width=510,height=640');popUp.focus();return false">
-            <i class="fa fa-stumbleupon"></i>
-        </a>
-        <a href="#" class="btn btn-linkedin"
+        <a href="#" data-content="Share" class="btn btn-linkedin btn-popover"
         onclick="popUp=window.open('https://www.linkedin.com/cws/share?url=http%3A%2F%2Fwww.libcrowds.com',
                                    'popupwindow', 'scrollbars=yes,width=510,height=520');popUp.focus();return false">
             <i class="fa fa-linkedin"></i>
         </a>
+        <div class="row">
+          <div class="col-xs-12" id="total-share-count" data-count="0">
+            
+          </div>
+        </div>
     </div>
 </div>
 </section>
