Fix twitter share button

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -84,9 +84,9 @@
                                    'popupwindow', 'scrollbars=yes,width=510,height=620');popUp.focus();return false">
             <i class="fa fa-facebook"></i>
         </a>
+        
         <a href="https://twitter.com/intent/tweet?original_referer=http%3A%2F%2Fwww.libcrowds.com
-        &text=Participate%20in%20crowdsourcing%20projects%20and%20help%20improve%20access%20to%20the%20British%20Library&
-        #39;s%20collections.&tw_p=tweetbutton&url=http%3A%2F%2Fwww.libcrowds.com" data-content="Share on Twitter" class="btn btn-twitter btn-popover">
+        &text=Participate%20in%20crowdsourcing%20projects%20and%20help%20improve%20access%20to%20the%20collections%20of%20the%20British%20Library.&tw_p=tweetbutton&url=http%3A%2F%2Fwww.libcrowds.com" data-content="Share on Twitter" class="btn btn-twitter btn-popover">
             <i class="fa fa-twitter"></i>
         </a>
         <a href="#" data-content="Share on Google+" class="btn btn-googleplus btn-popover"
