--- a/templates/account/email/blogupdate.html
+++ b/templates/account/email/blogupdate.html
@@ -1,4 +1,4 @@
-<h2 class="null"><a href="{{url_for('project.show_blogpost', short_name=blog.project.short_name, id=blog.id, _external=True)}}">Project Update: {{blog['title']}}</a></h2>
+<h2 class="null"><a href="{{url_for('blog.show_blogpost', id=blog.id, _external=True)}}">Project Update: {{blog['title']}}</a></h2>
 <section>{{blog['body'] | markdown }}</section>
 <hr>
 <p><a href="{{url_for('account.update_profile', name=user_name, _external=True)}}">Update your notifications preferences</a></p>
