--- a/templates/projects/presenter.html
+++ b/templates/projects/presenter.html
@@ -44,6 +44,6 @@
     </div>
 </div>
 {% if current_user.is_authenticated()  %}
-    <script>$.ajax('/api/discourse/badges/assign?trigger={{ request.url }}');</script>
+    <script>$.ajax('/api/discourse/badges/{{current_user.name}}/assign?trigger={{ request.url }}');</script>
 {% endif %}
 {% endblock %}
