--- a/templates/base.html
+++ b/templates/base.html
@@ -92,8 +92,22 @@
       {% assets "js_bottom" %}
         <script type="text/javascript" src="{{ ASSET_URL }}?v=2.0.2"></script>
       {% endassets %}
-      {% if current_user.is_authenticated() and not current_user.info.avatar %}
+      {% if current_user.is_authenticated() %} 
+        <script>
+          (function poll() {
+              setTimeout(function() {
+                  $.ajax({ url: "/api/discourse/notifications/{{current_user.name}}/count"
+                         , success: function(data) {
+                          if (data !== 0 && $.isNumeric(data)) {
+                            $('#community-nav').html('Community <span class="badge badge-danger">' + data + '</span>')
+                            }
+                            }, dataType: "json", complete: poll });
+                  }, 30000);
+           })();
+        </script>
+        {% if not current_user.info.avatar %}
           <script>$.ajax('/api/user/set_default_avatar');</script>
+        {% endif %}
       {% endif %}
   </body>
 </html>
