--- a/templates/base.html
+++ b/templates/base.html
@@ -94,16 +94,32 @@
       {% endassets %}
       {% if current_user.is_authenticated() %} 
         <script>
+          var originalTitle = document.title;
+          $(function() {
+            $.ajax({ url: "/api/discourse/notifications/{{current_user.name}}/count"
+                   , success: function(data) {
+                    updateNotificationsPill(data);
+            }});
+          });
+          
           (function poll() {
               setTimeout(function() {
                   $.ajax({ url: "/api/discourse/notifications/{{current_user.name}}/count"
                          , success: function(data) {
-                          if (data !== 0 && $.isNumeric(data)) {
-                            $('#community-nav').html('Community <span class="badge badge-danger">' + data + '</span>')
-                            }
-                            }, dataType: "json", complete: poll });
+                            updateNotificationsPill(data);
+                          }, dataType: "json", complete: poll });
                   }, 30000);
            })();
+          
+          function updateNotificationsPill(data) {
+            if (data !== 0 && $.isNumeric(data)) {
+              $('#community-nav').html('Community <span class="badge badge-danger">' + data + '</span>')
+              document.title = '(' + data + ') ' + originalTitle;
+            } else {
+              $('#community-nav').html('Community')
+              document.title = originalTitle
+            }
+          }
         </script>
         {% if not current_user.info.avatar %}
           <script>$.ajax('/api/user/set_default_avatar');</script>
