Change check for existing project stats data

--- a/templates/projects/blproject.html
+++ b/templates/projects/blproject.html
@@ -231,7 +231,7 @@
         var projectstats = {{appStats|safe}};
         
         //Hide charts of no data exists yet
-        if (projectstats['dayStats']['0']['values'].length < 1) {
+        if (projectstats['top5']['0']['values'].length < 1) {
             $('#stats').hide();
         } else {
             
