--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -63,13 +63,13 @@
           <a href="{{url_for('account.profile', name=user.name)}}" data-content="
              <strong>{{_('Joined')}}:</strong> {{user.created[0:10]}} 
              <br/>
-             <strong>{{_('Contributions')}}:</strong> {{user.task_runs}}
+             <strong>{{_('Contributions')}}:</strong> {{user.score}}
              " class="avatar-popover" data-original-title="<strong>{{user.name}}</strong>">
              <div class="shadow img-circle shadow-circle">
                 {{ account_helper.render_user_thumbnail(user, upload_method, class="img-circle") }}
              </div>
           </a>
-          <p class="label label-danger">{{user.task_runs}}</p>
+          <p class="label label-danger">{{user.score}}</p>
           </li>
           {% endfor %}
         </ul>
