--- a/templates/account/_helpers.html
+++ b/templates/account/_helpers.html
@@ -28,6 +28,7 @@
             </div>
         </div>
         <h1 class="inset-text-grey">{{user.fullname}}</h1>
+        <h4 class="inset-text-grey">{% if 'title' in user.info %}{{user.info['title']}}{% endif %}</h4>
     </div>
     <div class="col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1 white-rounded inset-shadow">
         
