--- a/templates/projects/auditlog.html
+++ b/templates/projects/auditlog.html
@@ -28,7 +28,7 @@
                             </thead>
                         {% for log in logs | sort(reverse=True, attribute='created') %}
                             <tr>
-                                <td><span class="format-date" data-date="{{log.created}}"></span></td>
+                                <td>{{log.created[8:10]}}-{{log.created[5:7]}}-{{log.created[0:4]}}</td>
                                 <td>{% if current_user.name == log.user_name%}You{%else%}{{log.user_name}}{%endif%}</td>
                                 <td class="hidden-sm hidden-xs">{{log.caller}}</td>
                                 <td>{{log.action}}</td>
