Make cards draggable

--- a/templates/projects/snippets/cards.html
+++ b/templates/projects/snippets/cards.html
@@ -209,6 +209,8 @@
      $.get('/api/user/get_ip', function(results) {
          $("#client_ip").html(results);
      });
+     
+     $("#image_container").draggable();
 
  });
 
