Don't show data for hidden projects

--- a/templates/data/index.html
+++ b/templates/data/index.html
@@ -46,11 +46,13 @@
                         </thead>
                         <tbody>
                             {% for project in projects %}
-                                <tr>
-                                    <td><a href="{{ url_for('blplugin.details', short_name = project.short_name) }}">{{project.name}}</a></td>
-                                    <td class="text-center"><a href="{{url_for('project.export_to', short_name=project.short_name, type='task', format='json')}}" rel="nofollow"><i class="fa fa-download"></i></a></td>
-                                    <td class="text-center"><a href="{{url_for('project.export_to', short_name=project.short_name, type='task', format='csv')}}" rel="nofollow"><i class="fa fa-download"></i></a></td>
-                                </tr>
+                                {% if not project.hidden %}
+                                  <tr>
+                                      <td><a href="{{ url_for('blplugin.details', short_name = project.short_name) }}">{{project.name}}</a></td>
+                                      <td class="text-center"><a href="{{url_for('project.export_to', short_name=project.short_name, type='task', format='json')}}" rel="nofollow"><i class="fa fa-download"></i></a></td>
+                                      <td class="text-center"><a href="{{url_for('project.export_to', short_name=project.short_name, type='task', format='csv')}}" rel="nofollow"><i class="fa fa-download"></i></a></td>
+                                  </tr>
+                                {% endif %}
                             {% endfor %}
                         </tbody>
                     </table>
@@ -71,11 +73,13 @@
                         </thead>
                         <tbody>
                             {% for project in projects %}
+                              {% if not project.hidden %}
                                 <tr>
                                     <td><a href="{{ url_for('blplugin.details', short_name = project.short_name) }}">{{project.name}}</a></td>
                                     <td class="text-center"><a href="{{url_for('project.export_to', short_name=project.short_name, type='task_run', format='json')}}" rel="nofollow"><i class="fa fa-download"></i></a></td>
                                     <td class="text-center"><a href="{{url_for('project.export_to', short_name=project.short_name, type='task_run', format='csv')}}" rel="nofollow"><i class="fa fa-download"></i></a></td>
                                 </tr>
+                              {% endif %}
                             {% endfor %}
                         </tbody>
                     </table>
@@ -96,6 +100,7 @@
                         </thead>
                         <tbody>
                             {% for project in projects %}
+                              {% if not project.hidden %}
                                 <tr>
                                     <td><a href="{{ url_for('blplugin.details', short_name = project.short_name) }}">{{project.name}}</a></td>
                                     <td class="text-center">{% if project.info.flickr_link %}<a href="{{project.info.flickr_link}}" target="_blank">{% endif %}<i class="fa fa-link"></i>{% if project.info.flickr_link %}</a>{% endif %}</td>
@@ -105,6 +110,7 @@
                                     <td class="text-center">No data available</td>
                                 {% endif %}
                                 </tr>
+                              {% endif %}
                             {% endfor %}
                         </tbody>
                     </table>
