Import message bus JS

--- a/templates/base.html
+++ b/templates/base.html
@@ -84,14 +84,18 @@
           {% include ['custom/_footer.html', '_footer.html'] ignore missing %}
         </footer>
       </div>
+      <script src="{{url_for('discourse_static.file', filename='js/message_bus.js')}}" />
+      
       {% if not preload_js == "true" %}
         {% assets "js_top" %}
         <script type="text/javascript" src="{{ ASSET_URL }}?v=2.0.2"></script>
         {% endassets %}
       {% endif %}
+      
       {% assets "js_bottom" %}
         <script type="text/javascript" src="{{ ASSET_URL }}?v=2.0.2"></script>
       {% endassets %}
+      
       {% if current_user.is_authenticated() %}
         {% if not current_user.info.avatar %}
           <script>$.ajax('/api/user/set_default_avatar');</script>
