--- a/templates/base.html
+++ b/templates/base.html
@@ -91,7 +91,36 @@
         {% endassets %}
       {% endif %}
       
-      {% include {{url_for('discourse_static.file', filename='html/_notifications.html')}} ignore missing %}
+      {% if current_user.is_authenticated() %}
+          <script>
+            var originalTitle = document.title;
+            var originalNavContent =  $('#discourse-nav').html();
+            $(function() {
+                      $.ajax({ url: "/api/discourse/notifications/{{current_user.name}}/count"
+                             , success: function(data) {
+                                updateNotificationsPill(data);
+                                }
+                      });
+            });
+            (function poll() {
+                      setTimeout(function() {
+                                $.ajax({ url: "/api/discourse/notifications/{{current_user.name}}/count"
+                                       , success: function(data) {
+                                          updateNotificationsPill(data);
+                                        }, dataType: "json", complete: poll });
+                      }, 15000);
+             })();
+            function updateNotificationsPill(data) {
+                      if (data !== 0 && $.isNumeric(data)) {
+                                $('#discourse-nav').html(originalNavContent + ' <span class="badge badge-danger">' + data + '</span>')
+                                document.title = '(' + data + ') ' + originalTitle;
+                      } else {
+                                $('#discourse-nav').html(originalNavContent)
+                                document.title = originalTitle
+                      }
+            }
+          </script>
+      {% endif %}
       
       {% assets "js_bottom" %}
         <script type="text/javascript" src="{{ ASSET_URL }}?v=2.0.2"></script>
