--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -22,7 +22,7 @@
               <li class="nav-link {% if active_page == 'projects' %} active{% endif %}"><a href="{{ url_for('project.index') }}">{{ _('Projects') }}</a></li>
               <li class="nav-link {% if active_page == 'globalstats' %} active{% endif %}"><a href="{{ url_for('statistics.index')}}">{{ _('Statistics') }}</a></li>
               <li class="nav-link"><a href="{{url_for('discourse.index')}}">Community
-                        {% if current_user.info.notification_count and current_user.info.notification_count > 0 %}
+                        {% if current_user.is_authenticated() and current_user.info.notification_count and current_user.info.notification_count > 0 %}
                                 <span id="discourse-notifications" class="badge badge-danger">{{current_user.info.notification_count}}</span>
                         {% endif %}
               </a></li>
