--- a/templates/projects/index.html
+++ b/templates/projects/index.html
@@ -14,15 +14,16 @@
             <div class="col-xs-10 col-xs-offset-1">
                 <ul class="nav nav-pills">
                     {% for c in categories %}
-                            <li {% if active_cat.short_name==c.short_name%}class="active"{% endif %}>
-                                <a href="{{url_for('project.project_cat_index', category=c.short_name)}}">{{ c.name }}</a>
-                            </li>
                             {% if c.short_name == 'staff' %}
                                 {% if current_user.admin %}
                                     <li {% if active_cat.short_name==c.short_name%}class="active"{% endif %}>
                                         <a href="{{url_for('project.project_cat_index', category=c.short_name)}}">{{ c.name }}</a>
                                     </li>
                                 {% endif %}
+                            {% else %}
+                                <li {% if active_cat.short_name==c.short_name%}class="active"{% endif %}>
+                                    <a href="{{url_for('project.project_cat_index', category=c.short_name)}}">{{ c.name }}</a>
+                                </li>
                             {% endif %}
                     {% endfor %}
                     {% if current_user.is_authenticated() and current_user.admin %}
